Added registry page, update menu names, changed layout of contact page

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<div class="w3layouts-logo">
 						<h1>
-							<a href="index.html">Contact</a>
+							<a href="index.html">Info</a>
 						</h1>
 					</div>
 				</div>
@@ -82,7 +82,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="about.html">Our Story</a></li>
                                 <li><a href="weddingParty.html">Wedding Party</a></li>
                                 <li><a href="menu.html">Food</a></li>
-                                <li><a class="active" href="contact.html">Contact</a></li>
+								<li><a href="registry.html">Registry</a></li>
+                                <li><a class="active" href="contact.html">Info</a></li>
                             </ul>
                             <div class="clearfix"> </div>
                         </div>
@@ -98,7 +99,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="w3layouts_breadcrumbs_left">
 				<ul>
 					<li><i class="fa fa-home" aria-hidden="true"></i><a href="index.html">Home</a><span>/</span></li>
-					<li><i class="fa fa-info-circle" aria-hidden="true"></i>Contact</li>
+					<li><i class="fa fa-info-circle" aria-hidden="true"></i>Info</li>
 				</ul>
 			</div>
 			<div class="w3layouts_breadcrumbs_right">
@@ -112,30 +113,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="contact-top">
 		<!-- container -->
 		<div class="container">
-			<div class="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d46733.03138926325!2d-85.6731573169424!3d42.94003818659355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x8819ae7f8ddbe76d%3A0x815d3e95fa53b6f!2sbasilica+of+saint+adalbert!3m2!1d42.975192899999996!2d-85.6846181!4m5!1s0x88184d2482ebd0a5%3A0x8981a60d6f4f45ff!2sVenue3Two%2C+Shaffer+Avenue+Southeast%2C+Kentwood%2C+MI!3m2!1d42.9035175!2d-85.5870365!5e0!3m2!1sen!2sus!4v1564102971655!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe></iframe>
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<h2>Blocked Hotel Rooms</h2>
+			</div>
+			<div class="col-md-6 text-center">
+				<h3>JW Marriot</h3>
+				<h4>Downtown Grand Rapids</h4>
+				<p>235 Louis St NW
+					<span>Grand Rapids, MI 49503</span>
+				</p>
+				<p>Phone: <b>877.901.6632</b></p>
+				<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
+			</div>
+			<div class="col-md-6 text-center">
+				<h3>Courtyard Marriot</h3>
+				<h4>Downtown Grand Rapids</h4>
+				<p>11 Monroe Ave NW
+					<span>Grand Rapids, MI 49503</span>
+				</p>
+				<p>Phone: <b>877.901.6632</b></p>
+				<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
 			</div>
 			<div class="mail-grids">
-				<div class="col-md-6 mail-grid-left">
-					<h2>Blocked Hotel Rooms</h2>
-					<h3>JW Marriot</h3>
-					<h4>Downtown Grand Rapids</h4>
-					<p>235 Louis St NW
-						<span>Grand Rapids, MI 49503</span>
-					</p>
-					<p>Phone: <b>877.901.6632</b></p>
-					<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
-					<br>
-					<h3>Courtyard Marriot</h3>
-					<h4>Downtown Grand Rapids</h4>
-					<p>11 Monroe Ave NW
-						<span>Grand Rapids, MI 49503</span>
-					</p>
-					<p>Phone: <b>877.901.6632</b></p>
-					<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
+				<div class="col-md-6">
+					<div class="map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d46733.03138926325!2d-85.6731573169424!3d42.94003818659355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x8819ae7f8ddbe76d%3A0x815d3e95fa53b6f!2sBasilica+of+St+Adalbert%2C+654+Davis+Ave+NW%2C+Grand+Rapids%2C+MI+49504!3m2!1d42.975192899999996!2d-85.6846181!4m5!1s0x88184d2482ebd0a5%3A0x8981a60d6f4f45ff!2sVenue3Two%2C+Shaffer+Avenue+Southeast%2C+Kentwood%2C+MI!3m2!1d42.9035175!2d-85.5870365!5e0!3m2!1sen!2sus!4v1565310409289!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</div>
 				</div>
-				<div class="col-md-6 contact-form">
-					<H2>Questions for Nathan & Lauren</H2>
+				<div class="col-md-6 contact-form text-center">
+					<h2>Got questions? Contact us.</h2>
 					<form action="mailto:lindenbaumWedding@gmail.com" method="post">
 						<input type="text" name="Name" placeholder="Name" required="">
 						<input type="email" name="Email" placeholder="Email" required="">
