--- a/footer.html
+++ b/footer.html
@@ -37,14 +37,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="w3agile_footer_grids">
         <div class="col-md-3 agileinfo_footer_grid">
             <div class="agileits_w3layouts_footer_logo">
-                <h5><a href="index.html">Lindenbaum Smith Wedding</a></h5>
+                <h5><a href="index.html">Smith & Lindenbaum Wedding</a></h5>
             </div>
         </div>
         <div class="col-md-3 agileinfo_footer_grid">
         </div>
         <div class="col-md-4 agileinfo_footer_grid">
             <h3>Contact Info</h3>
-            <h4>Email Us <span>lindenbaumWedding@gmail.com</span></h4>
+            <h4>Email Us <span>LindenbaumWedding@gmail.com</span></h4>
             <p>Grand Rapids, MI</p>
         </div>
         <div class="col-md-2 agileinfo_footer_grid agileinfo_footer_grid1">
@@ -53,7 +53,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li><a href="about.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Our Story</a></li>
                 <li><a href="weddingParty.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Wedding Party</a></li>
                 <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Food</a></li>
-                <li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Details</a></li>
+                <li><a href="registry.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Registry</a></li>
+                <li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Info</a></li>
             </ul>
         </div>
         <div class="clearfix"> </div>
