--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<div class="w3layouts-logo">
 						<h1>
-							<a href="index.html">Food Menu</a>
+							<a href="index.html">Dinner Menu</a>
 						</h1>
 					</div>
 				</div>
@@ -81,7 +81,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <li><a href="about.html">Our Story</a></li>
                                     <li><a href="weddingParty.html">Wedding Party</a></li>
                                     <li><a class="active" href="menu.html">Food</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+									<li><a href="registry.html">Registry</a></li>
+                                    <li><a href="contact.html">Info</a></li>
                                 </ul>
                                 <div class="clearfix"> </div>
                             </div>
