--- a/registry.html
+++ b/registry.html
@@ -7,10 +7,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Lindenbaum Wedding</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="utf-8">
-<meta name="keywords" content="Lindenbaum, Wedding, Lauren, Nathan" />
+	<title>Lindenbaum Wedding</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta name="keywords" content="Lindenbaum, Wedding, Lauren, Nathan" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstrap-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -28,7 +28,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="images/newNRLicon.png"/>
 	<!-- //favicon -->
-
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript">
@@ -39,11 +38,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		});
 	});
 </script>
-<script>
-    $(function(){
-        $("#footer").load("footer.html");
-    });
-</script>
+    <script>
+        $(function(){
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <![endif]-->
@@ -56,13 +56,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<div class="w3layouts-logo">
 						<h1>
-							<a href="index.html">Lauren & Nathan</a>
+							<a href="index.html">Registry</a>
 						</h1>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="header-bottom">
+		<div class="header-bottom agileinfo-header-bottom">
 			<div class="container">
 				<div class="top-nav">
 						<nav class="navbar navbar-default">
@@ -77,96 +77,65 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav">
-                                    <li><a class="active" href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">Our Story</a></li>
                                     <li><a href="weddingParty.html">Wedding Party</a></li>
                                     <li><a href="menu.html">Food</a></li>
-                                    <li><a href="registry.html">Registry</a></li>
+									<li><a class="active" href="registry.html">Registry</a></li>
                                     <li><a href="contact.html">Info</a></li>
                                 </ul>
                                 <div class="clearfix"> </div>
                             </div>
 						</nav>
 				</div>
-				<!-- w3-banner -->
-				<div class="w3-banner">
-					<div class="w3ls-banner-info">
-						<p>May 30, 2020 | Grand Rapids, MI</p>
-						<div class="w3ls-button">
-							<a href="about.html">Read More</a>
-						</div>
-					</div>
-				</div>
-				<!-- //w3-banner -->
 			</div>
 		</div>
 	</div>
 	<!-- //banner -->
-	<!-- events -->
-	<div class="w3-events">
+	<!-- breadcrumbs -->
+	<div class="breadcrumbs">
+		<div class="container">
+			<div class="w3layouts_breadcrumbs_left">
+				<ul>
+					<li><i class="fa fa-home" aria-hidden="true"></i><a href="index.html">Home</a><span>/</span></li>
+					<li><i class="fa fa-info-circle" aria-hidden="true"></i>Registry</li>
+				</ul>
+			</div>
+			<div class="w3layouts_breadcrumbs_right">
+				<h2>Registry</h2>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+	<!-- //breadcrumbs -->
+	<!-- about -->
+	<!-- team -->
+	<div class="team">
 		<div class="container">
 			<div class="wthree-heading">
-				<h3>Events & Details</h3>
+				<div class="about-top">
+					<div class="container">
+						<div class="about-top-grids">
+							<div class="col-md-6 col-md-offset-3 text-center">
+								<h3>Registries</h3>
+								<h4>Juliska</h4>
+								<p><a href="https://www.juliska.com/amgiftreg/gift/view/id/1084/">View</a></p>
+								<br>
+								<h4>Pottery Barn / Williams Sonoma</h4>
+								<p><a href="https://www.potterybarn.com/registry/500011097/registry-list.html?cm_ven=WedCh&bnrid=3340801&cm_ite=GiftGiver&cm_pla=WCSearchResults&cm_cat=Registry">View</a></p>
+
+							</div>
+                        </div>
+					</div>
+				</div>
 			</div>
-			<div class="agile_banner_bottom_grids">
-				<div class="agile_events_grid">
-					<img src="images/basilica.jpg" alt=" " class="img-responsive" />
-					<div class="agile_events_grid_pos agile_events_grid_pos1">
-						<h5><span>1:30pm</span> 5/30/2020</h5>
-						<h4>Ceremony</h4>
-						<p>Basilica of St Adalbert | 654 Davis Ave NW, Grand Rapids, MI 49504, USA</p>
-					</div>
-					<div class="agileits_w3layouts_events_grid_social">
-						<ul class="agileinfo_social_icons">
-							<li><a href="https://www.basilicagr.com" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="agile_events_grid">
-					<img src="images/v32.jpg" alt=" " class="img-responsive" />
-					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
-						<h5><span>4:30pm</span> 5/30/2020</h5>
-						<h4>Reception</h4>
-						<p>Venue3Two | 3220 32nd St SE, Kentwood, MI 49512, USA</p>
-					</div>
-					<div class="agileits_w3layouts_events_grid_social1">
-						<ul class="agileinfo_social_icons">
-							<li><a href="https://www.venue3two.com" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="agile_events_grid">
-					<img src="images/brunch.jpg" alt=" " class="img-responsive" />
-					<div class="agile_events_grid_pos agile_events_grid_pos1">
-						<h5><span>10:00am</span> 5/31/2020</h5>
-						<h4><a href="https://www.venue3two.com">Brunch</a></h4>
-						<p>JW Marriot | 235 Louis St NW, Grand Rapids, MI 49503, USA.</p>
-					</div>
-					<div class="agileits_w3layouts_events_grid_social">
-						<ul class="agileinfo_social_icons">
-							<li><a href="https://www.venue3two.com" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="agile_events_grid">
-					<img src="images/downtown.jpg" alt=" " class="img-responsive" />
-					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
-						<h5><span>Hotels</span></h5>
-                        <h4>JW Marriot</h4>
-                        <p>235 Louis St NW, GGrand Rapids, MI 49503, USA</p>
-						<h4>Courtyard Marriot</h4>
-						<p>11 Monroe Ave NW, Grand Rapids, MI 49503, USA</p>
-					</div>
-					<div class="agileits_w3layouts_events_grid_social1">
-						<ul class="agileinfo_social_icons">
-							<li><a href="https://book.passkey.com/e/49957728" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
+			<div>
+
 			</div>
 		</div>
 	</div>
-	<!-- //events -->
+	<!-- //team -->
+	<!-- //about -->
 	<!-- footer -->
     <div id="footer" class="footer">
     </div>
