--- a/weddingParty.html
+++ b/weddingParty.html
@@ -81,7 +81,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<li><a href="about.html">Our Story</a></li>
 									<li><a class="active" href="weddingParty.html">Wedding Party</a></li>
 									<li><a href="menu.html">Food</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="registry.html">Registry</a></li>
+									<li><a href="contact.html">Info</a></li>
 								</ul>
 								<div class="clearfix"> </div>
 							</div>
