--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="weddingParty.html">Wedding Party</a></li>
                                 <li><a href="menu.html">Food</a></li>
 								<li><a href="registry.html">Registry</a></li>
-                                <li><a class="active" href="contact.html">Info</a></li>
+                                <li><a class="active" href="contact.html">Accommodations</a></li>
                             </ul>
                             <div class="clearfix"> </div>
                         </div>
