--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <li><a href="weddingParty.html">Wedding Party</a></li>
                                     <li><a class="active" href="menu.html">Food</a></li>
 									<li><a href="registry.html">Registry</a></li>
-                                    <li><a href="contact.html">Info</a></li>
+                                    <li><a href="contact.html">Accommodations</a></li>
                                 </ul>
                                 <div class="clearfix"> </div>
                             </div>
@@ -132,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="w3layouts_team_grid">
                                     <img src="images/porkLoin.png" alt="Pork" class="img-responsive" />
                                     <div class="w3layouts_team_grid_pos">
-                                        <p>Tea rubbed Michigan duroc pork loin with mustard cream sauce</p>
+                                        <p>Tea rubbed Michigan duroc pork loin with mustard cream sauce. *Sides to change</p>
                                     </div>
                                 </div>
                                 <div class="center w3_agileits_team-info">
@@ -144,7 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="w3layouts_team_grid">
                                     <img src="images/salmon.png" alt="Salmon" class="img-responsive" />
                                     <div class="w3layouts_team_grid_pos">
-                                        <p>Peptia pesto Atlantic salmon with a tomato and caper relish</p>
+                                        <p>Peptia pesto Atlantic salmon with a tomato and caper relish. *Sides to change</p>
                                     </div>
                                 </div>
                                 <div class="center w3_agileits_team-info">
@@ -156,7 +156,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="w3layouts_team_grid">
                                     <img src="images/cauliflower.png" alt="Cauliflower" class="img-responsive" />
                                     <div class="w3layouts_team_grid_pos">
-                                        <p>Asian spiced cauliflower steak, red quinoa, seasonal tiny vegetables, spinach, kalbi sauce, sweet chili sauce, and scallions</p>
+                                        <p>Asian spiced cauliflower steak, red quinoa, seasonal tiny vegetables, spinach, kalbi sauce, sweet chili sauce, and scallions.</p>
                                     </div>
                                 </div>
                                 <div class="center w3_agileits_team-info">
