--- a/registry.html
+++ b/registry.html
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <li><a href="weddingParty.html">Wedding Party</a></li>
                                     <li><a href="menu.html">Food</a></li>
 									<li><a class="active" href="registry.html">Registry</a></li>
-                                    <li><a href="contact.html">Info</a></li>
+                                    <li><a href="contact.html">Accommodations</a></li>
                                 </ul>
                                 <div class="clearfix"> </div>
                             </div>
