--- a/weddingParty.html
+++ b/weddingParty.html
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<li><a class="active" href="weddingParty.html">Wedding Party</a></li>
 									<li><a href="menu.html">Food</a></li>
 									<li><a href="registry.html">Registry</a></li>
-									<li><a href="contact.html">Info</a></li>
+									<li><a href="contact.html">Accommodations</a></li>
 								</ul>
 								<div class="clearfix"> </div>
 							</div>
@@ -120,7 +120,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/reid.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Reid is Nathan's best friend and brother he never had. The two may live in different states but never miss a beat when they're together. They've been through the good, the bad and the ugly and Nathan couldn't image celebrating this day without Reid by his side. The two are frequently heard mumbling 'WAZZZAH' over the phone.</p>
+							<p>Reid is Nathan's best friend and brother he never had. The two may live in different countries but never miss a beat when they're together. They've been through the good, the bad and the ugly and Nathan couldn't image celebrating this day without Reid by his side. The two are frequently heard mumbling 'WAZZZAH' over the phone.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
@@ -156,7 +156,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/ben.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Ben and Nathan become instant friends in college for their shared love of nature, video games and good whiskey. The two have shared many wild nights (Nate's Mohawk days) and loads of laughs together and without a doubt will remain forever friends. Ben and Nate can be seen camping together smoking stogies.</p>
+							<p>Ben and Nathan became instant friends in college for their shared love of nature, video games and good whiskey. The two have shared many wild nights (Nate's Mohawk days) and loads of laughs together and without a doubt will remain forever friends. Ben and Nate can be seen camping together smoking stogies.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
@@ -171,7 +171,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/brody.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Brody Berson and Nate's high school role model who passed down his amazing beard growing abilities to Nate when he graduated (we are still waiting for those abilities to kick in). The two became close friends post college after Brody started dating one of Nathan's friends Stephany. Lauren, Nathan, Brody and Stephany love taking adventures together and know it's a life time of adventures ahead.</p>
+							<p>Brody Berson and Nate's high school role model who passed down his amazing beard growing abilities to Nate when he graduated (they finally kicked in). The two became close friends post college after Brody started dating one of Nathan's friends Stephany. Lauren, Nathan, Brody and Stephany love taking adventures together and know it's a life time of adventures ahead.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
@@ -183,7 +183,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/dylan.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Dylan is Nathan's childhood friend. The two were inseparable together and still remain great friends today despite different zip codes. Nate is happy to have Dylan by his side on this special day.</p>
+							<p>Dylan is Nathan's childhood friend. The two were inseparable together and still remain great friends today despite different zip codes. Nate and Dylan have been friends since first grade and will stay friends 'till they die.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
@@ -195,7 +195,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/jake.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Jake is Nathan's cousin and friend. The two have a mutual obsession with their grandmother's Swedish pancakes and the video game Red Dead Redemtion. Jake and Nate can be seen together playing hours of video games and drinking craft beer.</p>
+							<p>Jake is Nathan's cousin and friend. The two have a mutual obsession with their grandmother's Swedish pancakes and the video game Red Dead Redemtion 2. Jake and Nate can be seen together playing hours of video games and drinking craft beer.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
@@ -207,7 +207,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/kyle.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Kyle is Lauren's older brother and was relieved when Lauren met Nathan and finally did away with the poor slobs she was dating. Both Nathan and Kyle had an instant connection over their mutual interests and love of learning. Nathan and Kyle frequently nerd out and enjoy sipping a few cold ones watching ND football.</p>
+							<p>Kyle is Lauren's older brother and was relieved when Lauren met Nathan and finally did away with the poor slobs she was dating. Both Nathan and Kyle had an instant connection over their mutual interests and love of learning. Nathan and Kyle frequently nerd out and enjoy sipping a few cold ones anywhere they can.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
