More Lauren changes......

--- a/weddingParty.html
+++ b/weddingParty.html
@@ -232,7 +232,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/morgan.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Morgan Smith is Lauren's sisters and the matchmaker in Nathan and Lauren's love story. Morgan and Lauren enjoy hanging-out on the golf course together, having heart-to-hearts, and getting puppy snuggles from Palmer, Morgan's dog. Morgan is always Lauren's first call when she's trying to get in touch with someone from their family because Morgan ALWAYS answers. Lauren and Morgan can be found together lounging on their parents boat sipping cocktails.</p>					</div>
+							<p>Morgan Smith is Lauren's sisters and the matchmaker in Nathan and Lauren's love story. Morgan and Lauren enjoy hanging-out on the golf course, having heart-to-hearts, and like to snuggle, Palmer, Morgan's dog. Morgan is always Lauren's first call when she's trying to get in touch with someone from their family because Morgan ALWAYS answers. Lauren and Morgan can be found together lounging on their parents boat sipping cocktails.</p>					</div>
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Morgan Smith</h4>
@@ -267,7 +267,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/kylea.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Kylea is Lauren's cousin, sister, and friend. Kylea and Lauren were forced to like each other but became instant friends because of their shared love of fashion, work-outs and impressions. It's a rare to find Kylea and Lauren talking in their normal voices when they're together. Kylea and Lauren have been through a lot of embarrassing life lessons together, from trying to use self tanner and turning orange, to attempting to wax their legs and having the wax, what seemed like permanently adhere to their skin; they've been through the good, the bad and the ugly and wouldn't want life any other way. Lauren and Kylea can be found together doing "Sally squats".</p>
+							<p>Kylea is Lauren's cousin and the two share a love of fashion, work-outs and impressions. Kylea and Lauren have been through a lot of embarrassing life lessons together, from trying to use self tanner and turning orange, to waxing their legs and having it permanently adhere to their skin; they've been through the good, the bad and the ugly and wouldn't want life any other way. Lauren and Kylea can be found together doing "Sally squats".</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
