Laurens edits- I have lost all design control

--- a/footer.html
+++ b/footer.html
@@ -62,7 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <div class="w3_agileits_footer_copy">
     <div class="container">
-        <p>© 2019 The Lindenbaum's. All rights reserved | Design by <a href="http://w3layouts.com">Nathan Lindenbaum</a></p>
+        <p>© 2019 The Lindenbaum's. All rights reserved | Design by Lauren Smith | Coded By Nathan Lindenbaum</p>
     </div>
 </div>
 </body>
