--- a/menu.html
+++ b/menu.html
@@ -132,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="w3layouts_team_grid">
                                     <img src="images/porkLoin.png" alt="Pork" class="img-responsive" />
                                     <div class="w3layouts_team_grid_pos">
-                                        <p>Tea rubbed Michigan duroc pork loin with mustard cream sauce. *Sides to change</p>
+                                        <p>Tea rubbed Michigan duroc pork loin with mustard cream sauce. Served with roasted asparagus & garlic chive mashed potatoes.</p>
                                     </div>
                                 </div>
                                 <div class="center w3_agileits_team-info">
@@ -144,7 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="w3layouts_team_grid">
                                     <img src="images/salmon.png" alt="Salmon" class="img-responsive" />
                                     <div class="w3layouts_team_grid_pos">
-                                        <p>Peptia pesto Atlantic salmon with a tomato and caper relish. *Sides to change</p>
+                                        <p>Peptia pesto Atlantic salmon with a tomato and caper relish. Served with roasted asparagus & garlic chive mashed potatoes.</p>
                                     </div>
                                 </div>
                                 <div class="center w3_agileits_team-info">
