--- a/registry.html
+++ b/registry.html
@@ -121,9 +121,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<h4>Juliska</h4>
 								<p><a href="https://www.juliska.com/amgiftreg/gift/view/id/1084/">View</a></p>
 								<br>
-<!--								<h4>Pottery Barn / Williams Sonoma</h4>-->
-<!--								<p><a href="https://www.potterybarn.com/registry/500011097/registry-list.html?cm_ven=WedCh&bnrid=3340801&cm_ite=GiftGiver&cm_pla=WCSearchResults&cm_cat=Registry">View</a></p>-->
-
+								<h4>Pottery Barn / Williams Sonoma</h4>
+								<p><a href="https://www.williams-sonoma.com/registry/7qrt7v6l7s/registry-list.html">View</a></p>
+								<br>
+								<h4>West Elm</h4>
+								<p><a href="https://www.westelm.com/registry/7qrt7v6l7s/registry-list.html">View</a></p>
 							</div>
                         </div>
 					</div>
