--- a/weddingParty.html
+++ b/weddingParty.html
@@ -113,119 +113,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="team">
 		<div class="container">
 			<div class="wthree-heading">
-				<h3>The Boys...</h3>
-			</div>
-			<div class="w3ls_team_grids">
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/reid.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Reid is Nathan's best friend and brother he never had. The two may live in different countries but never miss a beat when they're together. They've been through the good, the bad and the ugly and Nathan couldn't image celebrating this day without Reid by his side. The two are frequently heard mumbling 'WAZZZAH' over the phone.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Reid Klootwyk</h4>
-						<p>Master Klootwyk</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/branden.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Branden is Nathan's other best friend who was once his "frienemie" turned basically brothers in high-school. The two share the same sense of humor and are often spotted belly laughing together. Nathan and Lauren both love spending time with Branden and his sweet girlfriend Alex.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Branden Maue</h4>
-						<p>Mao Zedong</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/ryan.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Ryan is Reid's Brother and Nathan's good friend from high school.The three and a couple other friends refereed to themselves as 2LH and shared loads of mischievous fun together. All guys still remain great friends today and frequently reminisce about their CRAZY days while playing the Mexican.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Ryan Klootwyk</h4>
-						<p>Ryan</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/ben.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Ben and Nathan became instant friends in college for their shared love of nature, video games and good whiskey. The two have shared many wild nights (Nate's Mohawk days) and loads of laughs together and without a doubt will remain forever friends. Ben and Nate can be seen camping together smoking stogies.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Ben Ocharzak</h4>
-						<p>Benno</p>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="w3ls_team_grids">
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/brody.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Brody Berson and Nate's high school role model who passed down his amazing beard growing abilities to Nate when he graduated (they finally kicked in). The two became close friends post college after Brody started dating one of Nathan's friends Stephany. Lauren, Nathan, Brody and Stephany love taking adventures together and know it's a life time of adventures ahead.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Brody Berson</h4>
-						<p>Brody</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/dylan.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Dylan is Nathan's childhood friend. The two were inseparable together and still remain great friends today despite different zip codes. Nate and Dylan have been friends since first grade and will stay friends 'till they die.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Dylan Barry</h4>
-						<p>D Barry</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/jake.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Jake is Nathan's cousin and friend. The two have a mutual obsession with their grandmother's Swedish pancakes and the video game Red Dead Redemtion 2. Jake and Nate can be seen together playing hours of video games and drinking craft beer.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Jake Russell</h4>
-						<p>Jakester</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/kyle.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Kyle is Lauren's older brother and was relieved when Lauren met Nathan and finally did away with the poor slobs she was dating. Both Nathan and Kyle had an instant connection over their mutual interests and love of learning. Nathan and Kyle frequently nerd out and enjoy sipping a few cold ones anywhere they can.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Kyle Smith</h4>
-						<p>Smitty</p>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
-	</div>
-	<!-- //team -->
-
-	<!-- team -->
-	<div class="team">
-		<div class="container">
-			<div class="wthree-heading">
-				<h3>The Ladies...</h3>
+				<h3>The Bridal Party...</h3>
 			</div>
 			<div class="w3ls_team_grids">
 				<div class="col-md-3 w3_agileits_team_grid">
@@ -236,7 +124,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Morgan Smith</h4>
-						<p>Mo</p>
+						<p>Maid of Honor</p>
 					</div>
 				</div>
 				<div class="col-md-3 w3_agileits_team_grid">
@@ -248,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Meredith DeTorres</h4>
-						<p>Meren</p>
+						<p>Matron of Honor</p>
 					</div>
 				</div>
 				<div class="col-md-3 w3_agileits_team_grid">
@@ -260,7 +148,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Emily Olsen</h4>
-						<p>Em</p>
+						<p>Bridesmaid</p>
 					</div>
 				</div>
 				<div class="col-md-3 w3_agileits_team_grid">
@@ -272,7 +160,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Kylea Carlston</h4>
-						<p>Kylea</p>
+						<p>Bridesmaid</p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
@@ -287,7 +175,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Amy Studier</h4>
-						<p>Amy</p>
+						<p>Bridesmaid</p>
 					</div>
 				</div>
 				<div class="col-md-3 w3_agileits_team_grid">
@@ -299,7 +187,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Allison Smith</h4>
-						<p>Allison</p>
+						<p>Bridesmaid</p>
 					</div>
 				</div>
 				<div class="col-md-3 w3_agileits_team_grid">
@@ -311,7 +199,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Emily Kant</h4>
-						<p>Emily</p>
+						<p>Bridesmaid</p>
 					</div>
 				</div>
 				<div class="col-md-3 w3_agileits_team_grid">
@@ -323,7 +211,145 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_team-info">
 						<h4>Emily Lindenbaum</h4>
-						<p>Sis</p>
+						<p>Bridesmaid</p>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
+	</div>
+	<!-- //team -->
+	<!-- team -->
+	<div class="team">
+		<div class="container">
+			<div class="wthree-heading">
+				<h3>The Boys...</h3>
+			</div>
+			<div class="w3ls_team_grids">
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/reid.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Reid is Nathan's best friend and brother he never had. The two may live in different countries but never miss a beat when they're together. They've been through the good, the bad and the ugly and Nathan couldn't image celebrating this day without Reid by his side. The two are frequently heard mumbling 'WAZZZAH' over the phone.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Reid Klootwyk</h4>
+						<p>Best Man</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/branden.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Branden is Nathan's other best friend who was once his "frienemie" turned basically brothers in high-school. The two share the same sense of humor and are often spotted belly laughing together. Nathan and Lauren both love spending time with Branden and his sweet girlfriend Alex.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Branden Maue</h4>
+						<p>Best Man</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/ryan.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Ryan is Reid's Brother and Nathan's good friend from high school.The three and a couple other friends refereed to themselves as 2LH and shared loads of mischievous fun together. All guys still remain great friends today and frequently reminisce about their CRAZY days while playing the Mexican.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Ryan Klootwyk</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/ben.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Ben and Nathan became instant friends in college for their shared love of nature, video games and good whiskey. The two have shared many wild nights (Nate's Mohawk days) and loads of laughs together and without a doubt will remain forever friends. Ben and Nate can be seen camping together smoking stogies.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Ben Ocharzak</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="w3ls_team_grids">
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/brody.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Brody Berson and Nate's high school role model who passed down his amazing beard growing abilities to Nate when he graduated (they finally kicked in). The two became close friends post college after Brody started dating one of Nathan's friends Stephany. Lauren, Nathan, Brody and Stephany love taking adventures together and know it's a life time of adventures ahead.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Brody Berson</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/dylan.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Dylan is Nathan's childhood friend. The two were inseparable together and still remain great friends today despite different zip codes. Nate and Dylan have been friends since first grade and will stay friends 'till they die.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Dylan Barry</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/jake.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Jake is Nathan's cousin and friend. The two have a mutual obsession with their grandmother's Swedish pancakes and the video game Red Dead Redemtion 2. Jake and Nate can be seen together playing hours of video games and drinking craft beer.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Jake Russell</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/kyle.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Kyle is Lauren's older brother and was relieved when Lauren met Nathan and finally did away with the poor slobs she was dating. Both Nathan and Kyle had an instant connection over their mutual interests and love of learning. Nathan and Kyle frequently nerd out and enjoy sipping a few cold ones anywhere they can.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Kyle Smith</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="w3ls_team_grids">
+				<div class="col-md-3 col-md-offset-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/conor.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Conor and Nate may have just met, but they hit it off instantly, despite the fact that Conor is die hard Michigan fan. They have been able to bond over many beers while watching football. Heck who am I kidding, they don't need a reason to drink beers together.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Conor Miencier</h4>
+						<p>Usher</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/chris.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Nate met Chris around two years ago at another wedding. Chris was unsure of what he thought of Nate at first, but that went away after they shared a brew at the wedding and got Lauren and Emma to dance. They can frequently be seen standing over a grill debating how long to cook the meat.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Chris Wach</h4>
+						<p>Usher</p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
