--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="mail-grids">
 				<div class="col-md-6">
 					<div class="map">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d46733.03138926325!2d-85.6731573169424!3d42.94003818659355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x8819ae7f8ddbe76d%3A0x815d3e95fa53b6f!2sBasilica+of+St+Adalbert%2C+654+Davis+Ave+NW%2C+Grand+Rapids%2C+MI+49504!3m2!1d42.975192899999996!2d-85.6846181!4m5!1s0x88184d2482ebd0a5%3A0x8981a60d6f4f45ff!2sVenue3Two%2C+Shaffer+Avenue+Southeast%2C+Kentwood%2C+MI!3m2!1d42.9035175!2d-85.5870365!5e0!3m2!1sen!2sus!4v1565310409289!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Mp5H6OAiNGMliaSUovoUuZh5j-yr2Fsj" width="640" height="480"></iframe>
 					</div>
 				</div>
 				<div class="col-md-6 contact-form text-center">
