--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="agile_events_grid">
 					<img src="images/basilica.jpg" alt=" " class="img-responsive" />
 					<div class="agile_events_grid_pos agile_events_grid_pos1">
-						<h5><span>1:30pm</span> 5/30/2020</h5>
+						<h5><span>1:00pm</span> 5/30/2020</h5>
 						<h4>Ceremony</h4>
 						<p>Basilica of St Adalbert | 654 Davis Ave NW, Grand Rapids, MI 49504, USA</p>
 					</div>
@@ -125,7 +125,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="agile_events_grid">
 					<img src="images/v32.jpg" alt=" " class="img-responsive" />
 					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
-						<h5><span>4:30pm</span> 5/30/2020</h5>
+						<h5><span>4:00pm</span> 5/30/2020</h5>
+						<h4>Cocktail Hour</h4>
+						<h5><span>6:00pm</span> 5/30/2020</h5>
 						<h4>Reception</h4>
 						<p>Venue3Two | 3220 32nd St SE, Kentwood, MI 49512, USA</p>
 					</div>
