Trying to fix bad photo on mobile

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 				<div class="agile_events_grid">
-					<img src="images/downtown.jpg" alt=" " class="img-responsive" />
+					<img src="images/downtownGR.jpg" alt=" " class="img-responsive" />
 					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
 						<h5><span>Hotels</span></h5>
                         <h4>JW Marriot</h4>
