Another Lauren nit-picky thing

--- a/registry.html
+++ b/registry.html
@@ -121,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<h4>Juliska</h4>
 								<p><a href="https://www.juliska.com/amgiftreg/gift/view/id/1084/">View</a></p>
 								<br>
-								<h4>Pottery Barn / Williams Sonoma</h4>
+								<h4>Williams Sonoma</h4>
 								<p><a href="https://www.williams-sonoma.com/registry/7qrt7v6l7s/registry-list.html">View</a></p>
 								<br>
 								<h4>West Elm</h4>
