CoronaVirus update on main page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div>
 		</div>
+		<div class="alert">
+			<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+			As of now we are moving forward with all original wedding plans on May 30th, 2020. We have a contingency plan in place and will decide if postponement is the best course of action in the coming weeks. We thank you for you patience and understanding as we navigate through this together. Please check back here for future updates.
+		</div>
 		<div class="header-bottom">
 			<div class="container">
 				<div class="top-nav">
