Update travel info and menu names.

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="weddingParty.html">Wedding Party</a></li>
                                 <li><a href="menu.html">Food</a></li>
 								<li><a href="registry.html">Registry</a></li>
-                                <li><a class="active" href="contact.html">Accommodations</a></li>
+                                <li><a class="active" href="contact.html">Travel & Stay</a></li>
                             </ul>
                             <div class="clearfix"> </div>
                         </div>
@@ -113,6 +113,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="contact-top">
 		<!-- container -->
 		<div class="container">
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<h2>Transportation</h2>
+			</div>
+			<div class="col-md-12 text-center">
+				<h5>Free onsite parking is available at the Basilica of St. Adalbert and Venue3Two.</h5>
+				<h5>Guest transportation will be proved to and from the hotels to the wedding reception by way of shuttle service. Shuttles will leave from the hotels beginning at 4:00 PM and will return every 30 minutes. The last shuttle to reception will leave at 5:15 PM</h5>
+				<h5>Ready to call it a night? Shuttles back to the hotels will depart every 30 minutes, starting at 8:30 PM. The last shuttle leaves at 11:00 PM.</h5>
+			</div>
+			</div>
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<h2>Blocked Hotel Rooms</h2>
 			</div>
