--- a/footer.html
+++ b/footer.html
@@ -54,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li><a href="weddingParty.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Wedding Party</a></li>
                 <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Food</a></li>
                 <li><a href="registry.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Registry</a></li>
-                <li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Info</a></li>
+                <li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Travel & Stay</a></li>
             </ul>
         </div>
         <div class="clearfix"> </div>
