--- a/groomsmen.html
+++ b/groomsmen.html
@@ -75,7 +75,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <li><a href="about.html">Our Story</a></li>
                                     <li><a class="active" href="groomsmen.html">Groomsmen</a></li>
                                     <li><a href="bridesmaids.html">Bridesmaids</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="Travel & Stay.html">Contact</a></li>
                                 </ul>
                                 <div class="clearfix"> </div>
                             </div>
@@ -245,7 +245,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="gallery.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Gallery</a></li>
 						<li><a href="groomsmen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Groomsmen</a></li>
 						<li><a href="bridesmaids.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Bridesmaids</a></li>
-						<li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Contact</a></li>
+						<li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Travel & Stay</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
