--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <li><a href="weddingParty.html">Wedding Party</a></li>
                                     <li><a href="menu.html">Food</a></li>
                                     <li><a href="registry.html">Registry</a></li>
-                                    <li><a href="contact.html">Accommodations</a></li>
+                                    <li><a href="contact.html">Travel & Stay</a></li>
                                 </ul>
                                 <div class="clearfix"> </div>
                             </div>
