Update because of fucking covid

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">Our Story</a></li>
                                 <li><a href="weddingParty.html">Wedding Party</a></li>
-                                <li><a href="menu.html">Food</a></li>
 								<li><a href="registry.html">Registry</a></li>
                                 <li><a class="active" href="contact.html">Travel & Stay</a></li>
                             </ul>
@@ -114,42 +113,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!-- container -->
 		<div class="container">
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<h2>Transportation</h2>
-			</div>
-			<div class="col-md-12 text-center">
-				<h5>Free onsite parking is available at the Basilica of St. Adalbert and Venue3Two.</h5>
-				<h5>Guest transportation will be proved to and from the hotels to the wedding reception by way of shuttle service. Shuttles will leave from the hotels beginning at 4:00 PM and will return every 30 minutes. The last shuttle to reception will leave at 5:15 PM</h5>
-				<h5>Ready to call it a night? Shuttles back to the hotels will depart every 30 minutes, starting at 8:30 PM. The last shuttle leaves at 11:00 PM.</h5>
-			</div>
-			</div>
-			<div class="col-md-6 col-md-offset-3 text-center">
 				<h2>Blocked Hotel Rooms</h2>
 			</div>
-			<div class="col-md-6 text-center">
-				<h3>JW Marriot</h3>
-				<h4>Downtown Grand Rapids</h4>
-				<p>235 Louis St NW
-					<span>Grand Rapids, MI 49503</span>
-				</p>
-				<p>Phone: <b>877.901.6632</b></p>
-				<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
-			</div>
-			<div class="col-md-6 text-center">
-				<h3>Courtyard Marriot</h3>
-				<h4>Downtown Grand Rapids</h4>
-				<p>11 Monroe Ave NW
-					<span>Grand Rapids, MI 49503</span>
-				</p>
-				<p>Phone: <b>877.901.6632</b></p>
-				<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
+				<div class="col-md-12 text-center">
+					<h5>For your convenience, we have cancelled the wedding room blocks at the JW Marriott and the Courtyard Marriott hotels. Any guest who made a reservation under our block, will see that there reservation has been cancelled.</h5>
+				</div>
 			</div>
 			<div class="mail-grids">
-				<div class="col-md-6">
-					<div class="map">
-						<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Mp5H6OAiNGMliaSUovoUuZh5j-yr2Fsj" width="640" height="480"></iframe>
-					</div>
-				</div>
-				<div class="col-md-6 contact-form text-center">
+				<div class="col-md-6 col-md-offset-3 contact-form text-center">
 					<h2>Got questions? Contact us.</h2>
 					<form action="mailto:lindenbaumWedding@gmail.com" method="post">
 						<input type="text" name="Name" placeholder="Name" required="">
