--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="alert">
 			<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-			As of now we are moving forward with all original wedding plans on May 30th, 2020. We have a contingency plan in place and will decide if postponement is the best course of action in the coming weeks. We thank you for you patience and understanding as we navigate through this together. Please check back here for future updates.
+			<h2>Plans change, our love has not.<br></h2>
+			We've made the difficult decision to forgo the wedding we originally planned. We invite you to join us virtually at 1:00 PM on May 30th, 2020 to witness our ceremony. We will provide a direct link here prior to the event. Please check back for further updates soon.
 		</div>
 		<div class="header-bottom">
 			<div class="container">
@@ -84,7 +85,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <li><a class="active" href="index.html">Home</a></li>
                                     <li><a href="about.html">Our Story</a></li>
                                     <li><a href="weddingParty.html">Wedding Party</a></li>
-                                    <li><a href="menu.html">Food</a></li>
                                     <li><a href="registry.html">Registry</a></li>
                                     <li><a href="contact.html">Travel & Stay</a></li>
                                 </ul>
@@ -123,49 +123,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="agileits_w3layouts_events_grid_social">
 						<ul class="agileinfo_social_icons">
 							<li><a href="https://www.basilicagr.com" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="agile_events_grid">
-					<img src="images/v32.jpg" alt=" " class="img-responsive" />
-					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
-						<h5><span>4:30pm</span> 5/30/2020</h5>
-						<h4>Cocktail Hour</h4>
-						<h5><span>6:00pm</span> 5/30/2020</h5>
-						<h4>Reception</h4>
-						<p>Venue3Two | 3220 32nd St SE, Kentwood, MI 49512, USA</p>
-					</div>
-					<div class="agileits_w3layouts_events_grid_social1">
-						<ul class="agileinfo_social_icons">
-							<li><a href="https://www.venue3two.com" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="agile_events_grid">
-					<img src="images/brunch.jpg" alt=" " class="img-responsive" />
-					<div class="agile_events_grid_pos agile_events_grid_pos1">
-						<h5><span>10:00am</span> 5/31/2020</h5>
-						<h4><a href="https://www.venue3two.com">Brunch</a></h4>
-						<p>JW Marriot | 235 Louis St NW, Grand Rapids, MI 49503, USA.</p>
-					</div>
-					<div class="agileits_w3layouts_events_grid_social">
-						<ul class="agileinfo_social_icons">
-							<li><a href="https://www.venue3two.com" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="agile_events_grid">
-					<img src="images/downtownGR.jpg" alt=" " class="img-responsive" />
-					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
-						<h5><span>Hotels</span></h5>
-                        <h4>JW Marriot</h4>
-                        <p>235 Louis St NW, GGrand Rapids, MI 49503, USA</p>
-						<h4>Courtyard Marriot</h4>
-						<p>11 Monroe Ave NW, Grand Rapids, MI 49503, USA</p>
-					</div>
-					<div class="agileits_w3layouts_events_grid_social1">
-						<ul class="agileinfo_social_icons">
-							<li><a href="https://book.passkey.com/e/49957728" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
